development
-----------

- fix issue150: parse {posargs} more like we used to do it pre 1.7.0.
  The 1.7.0 behaviour broke a lot of OpenStack projects.
  See PR85 and the issue discussions for (far) more details, hopefully
  resulting in a more refined behaviour in the 1.8 series.
  And thanks to Clark Boylan for the PR.

- fix issue59: add option "--skip-missing-interpreters" which won't fail the
  build if Python interpreters listed in tox.ini are missing.  Thanks 
  Alexandre Conrad for PR104.

- fix issue164: better traceback info in case of failing test commands.
  Thanks Marc Abramowitz for PR92.

- support optional env variable substitution, thanks Morgan Fainberg
  for PR86.

- limit python hashseed to 1024 on Windows to prevent possible
  memory errors.  Thanks March Schlaich for the PR90.

1.7.1
---------

- fix issue162: don't list python 2.5 as compatibiliy/supported

- fix issue158 and fix issue155: windows/virtualenv properly works now:
  call virtualenv through "python -m virtualenv" with the same 
  interpreter which invoked tox.  Thanks Chris Withers, Ionel Maries Cristian.

1.7.0
---------

- don't lookup "pip-script" anymore but rather just "pip" on windows 
  as this is a pip implementation detail and changed with pip-1.5.  
  It might mean that tox-1.7 is not able to install a different pip 
  version into a virtualenv anymore.

- drop Python2.5 compatibility because it became too hard due
  to the setuptools-2.0 dropping support.  tox now has no 
  support for creating python2.5 based environments anymore
  and all internal special-handling has been removed.

- merged PR81: new option --force-dep which allows to 
  override tox.ini specified dependencies in setuptools-style.
  For example "--force-dep 'django<1.6'" will make sure
  that any environment using "django" as a dependency will 
  get the latest 1.5 release.  Thanks Bruno Oliveria for 
  the complete PR.
  
- merged PR125: tox now sets "PYTHONHASHSEED" to a random value